tests/api/reference/negative/03-union-field-default.asm
union Value {
    raw: u32 = 1
    byte: u8
}

const value: Value = Value { raw: 2 }
